Import the 0.186 release

--- a/debian/po/am.po
+++ b/debian/po/am.po
@@ -17,7 +17,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: apt-setup@packages.debian.org\n"
-"POT-Creation-Date: 2023-01-23 20:01+0000\n"
+"POT-Creation-Date: 2024-05-11 20:02+0000\n"
 "PO-Revision-Date: 2022-12-11 11:40+0000\n"
 "Last-Translator: Danial Behzadi <dani.behzi@ubuntu.com>\n"
 "Language-Team: Amharic <linux-ethiopia@googlegroups.com>\n"
@@ -505,7 +505,6 @@ msgstr "የማኅደር-መስተዋትን በማሰስ ላይ"
 #. :sl5:
 #: ../apt-mirror-setup.templates:2001
 #, fuzzy
-#| msgid "Use non-free software?"
 msgid "Use non-free firmware?"
 msgstr "ነጻ ያልሆነ ስስ-አካል ልጠቀም?"
 
@@ -513,21 +512,22 @@ msgstr "ነጻ ያልሆነ ስስ-አካል ልጠቀም?"
 #. Description
 #. :sl5:
 #: ../apt-mirror-setup.templates:2001
-#, fuzzy
-#| msgid ""
-#| "Some non-free software has been made to work with Debian. Though this "
-#| "software is not at all a part of Debian, standard Debian tools can be "
-#| "used to install it. This software has varying licenses which may prevent "
-#| "you from using, modifying, or sharing it."
 msgid ""
-"Some non-free firmware has been made to work with Debian. Though this "
-"firmware is not at all a part of Debian, standard Debian tools can be used "
-"to install it. This firmware has varying licenses which may prevent you from "
-"using, modifying, or sharing it."
+"Firmware is a kind of software providing low-level control of certain "
+"hardware components (such as Wi-Fi cards or audio chipsets), which may not "
+"function fully or at all without it."
 msgstr ""
-"አንዳንድ ነጻ ያልሆኑ ስልቶች ከደቢያን አቅርቦት ጋር እንዲሰሩ ተደርገዋል። ምንም እንኳን እነዚህ ስልቶች የዋናው "
-"አቅርቦት አካል ባይሆኑም የተከላ አስተዳዳሪውን በመጠቀም እንዚህን ስልቶች መትከል ይቻላል። እንዚህ ስልቶች ከመጠቀም፣ "
-"ከማጋራት ወይም ከማሻሻል ሊገደብ የሚችሉ የተለያዩ ፈቃዶች ሊኖራቸው ይችላል።"
+
+#. Type: boolean
+#. Description
+#. :sl5:
+#: ../apt-mirror-setup.templates:2001
+msgid ""
+"Although not at all part of Debian, some non-free firmware has been made to "
+"work with Debian. This firmware has varying licenses which restrict your "
+"freedoms to use, modify, or share the software, and generally does not have "
+"source forms that you may study."
+msgstr ""
 
 #. Type: boolean
 #. Description
