--- a/debian/po/bn.po
+++ b/debian/po/bn.po
@@ -32,7 +32,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: bn\n"
 "Report-Msgid-Bugs-To: apt-setup@packages.debian.org\n"
-"POT-Creation-Date: 2023-01-23 20:01+0000\n"
+"POT-Creation-Date: 2024-05-11 20:02+0000\n"
 "PO-Revision-Date: 2023-05-14 17:53+0000\n"
 "Last-Translator: Indrani Roy <indrani@scriptek.co.in>\n"
 "Language-Team: Bengali\n"
@@ -543,22 +543,26 @@ msgstr "মিরর স্ক্যান করা হচ্ছে..."
 msgid "Use non-free firmware?"
 msgstr "যে সব সফটওয়্যার ফ্রী সফটওয়্যার নয় আপনি কি তাদের ব্যবহার করতে চান?"
 
-# FIXME: Is the translation okay?
 #. Type: boolean
 #. Description
 #. :sl5:
 #: ../apt-mirror-setup.templates:2001
-#, fuzzy
 msgid ""
-"Some non-free firmware has been made to work with Debian. Though this "
-"firmware is not at all a part of Debian, standard Debian tools can be used "
-"to install it. This firmware has varying licenses which may prevent you from "
-"using, modifying, or sharing it."
+"Firmware is a kind of software providing low-level control of certain "
+"hardware components (such as Wi-Fi cards or audio chipsets), which may not "
+"function fully or at all without it."
 msgstr ""
-"ডেবিয়ান-এ আপনি এমন কিছু সফটওয়্যার ব্যবহার করতে পারেন যারা ফ্রী সফটওয়্যার নয়। এই "
-"সফটওয়্যারটি ডেবিয়ানের অংশ না হলেও, একে ডেবিয়ান-এর সফটওয়্যার ইনস্টলেশন পদ্ধতি "
-"ব্যবহার করে ইনস্টল করা যায়। এই সফটওয়্যারটির বিভিন্নরকম লাইসেন্স রয়েছে যা হয়তো "
-"আপনাকে সফটওয়্যারটি ব্যবহার, পরিবর্তন, বা শেয়ার করতে বাঁধা দিতে পারে।"
+
+#. Type: boolean
+#. Description
+#. :sl5:
+#: ../apt-mirror-setup.templates:2001
+msgid ""
+"Although not at all part of Debian, some non-free firmware has been made to "
+"work with Debian. This firmware has varying licenses which restrict your "
+"freedoms to use, modify, or share the software, and generally does not have "
+"source forms that you may study."
+msgstr ""
 
 #. Type: boolean
 #. Description
