--- a/debian/po/dz.po
+++ b/debian/po/dz.po
@@ -18,9 +18,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dDz.po\n"
 "Report-Msgid-Bugs-To: apt-setup@packages.debian.org\n"
-"POT-Creation-Date: 2023-01-23 20:01+0000\n"
-"PO-Revision-Date: 2019-08-28 18:09+0000\n"
-"Last-Translator: leela <53352@protonmail.com>\n"
+"POT-Creation-Date: 2024-05-11 20:02+0000\n"
+"PO-Revision-Date: 2021-05-21 05:32+0000\n"
+"Last-Translator: Jacque Fresco <aidter@use.startmail.com>\n"
 "Language-Team: Dzongkha <pgeyleg@dit.gov.bt>\n"
 "Language: dz\n"
 "MIME-Version: 1.0\n"
@@ -536,7 +536,6 @@ msgstr "ངོ་འཆར་འདི་ཞིབ་ལྟ་འབད་དོ
 #. :sl5:
 #: ../apt-mirror-setup.templates:2001
 #, fuzzy
-#| msgid "Use non-free software?"
 msgid "Use non-free firmware?"
 msgstr "དལཝ་མེད་པའི་མཉེན་ཆས་ལག་ལེན་འཐབ?"
 
@@ -544,22 +543,22 @@ msgstr "དལཝ་མེད་པའི་མཉེན་ཆས་ལག་ལ
 #. Description
 #. :sl5:
 #: ../apt-mirror-setup.templates:2001
-#, fuzzy
-#| msgid ""
-#| "Some non-free software has been made to work with Debian. Though this "
-#| "software is not at all a part of Debian, standard Debian tools can be "
-#| "used to install it. This software has varying licenses which may prevent "
-#| "you from using, modifying, or sharing it."
 msgid ""
-"Some non-free firmware has been made to work with Debian. Though this "
-"firmware is not at all a part of Debian, standard Debian tools can be used "
-"to install it. This firmware has varying licenses which may prevent you from "
-"using, modifying, or sharing it."
+"Firmware is a kind of software providing low-level control of certain "
+"hardware components (such as Wi-Fi cards or audio chipsets), which may not "
+"function fully or at all without it."
 msgstr ""
-"དལཝ་མེད་པའི་མཉེན་ཆས་ལ་ལུ་ཅིག་ཌི་བི་ཡཱན་མཉམ་ལཱ་འབད་ནི་ལུ་བཟོ་འདི་ཡོད། མ་གཞི་འ་ནི་མཉེན་ཆས་འདི་ཌི་"
-"བི་ཡཱན་གྱི་ཆ་ཤས་ཅིག་མེན་རུང་ འདི་གཞི་བཙུགས་འབད་ནི་ལུ་ཚད་ལྡན་ཌི་བི་ཡཱན་ལག་ཆས་ཚུ་ལག་ལེན་འཐབ་ཚུགས། "
-"འ་ནི་མཉེན་ཆས་ལུ་འགྱུར་ནིའི་ཆོག་ཐམ་ཚུ་ཡོདཔ་ལས་ལག་ལེན་འཐབ་ནི་ ལེགས་བཅོས་བཟོ་ནི་ ཡང་ན་ འདི་རུབ་སྤྱོད་"
-"འབད་ནི་ལས་ཁྱོད་སྔོན་བཀག་འབད་ནི་འོང་།"
+
+#. Type: boolean
+#. Description
+#. :sl5:
+#: ../apt-mirror-setup.templates:2001
+msgid ""
+"Although not at all part of Debian, some non-free firmware has been made to "
+"work with Debian. This firmware has varying licenses which restrict your "
+"freedoms to use, modify, or share the software, and generally does not have "
+"source forms that you may study."
+msgstr ""
 
 #. Type: boolean
 #. Description
