--- a/debian/po/el.po
+++ b/debian/po/el.po
@@ -35,7 +35,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: el\n"
 "Report-Msgid-Bugs-To: apt-setup@packages.debian.org\n"
-"POT-Creation-Date: 2023-01-23 20:01+0000\n"
+"POT-Creation-Date: 2024-05-11 20:02+0000\n"
 "PO-Revision-Date: 2023-05-13 02:46+0300\n"
 "Last-Translator: galaxico <galas@tee.gr>\n"
 "Language-Team: Greek <debian-l10n-greek@lists.debian.org>\n"
@@ -558,16 +558,21 @@ msgstr "Να γίνει χρήση μη ελεύθερου υλισμικού;"
 #. :sl5:
 #: ../apt-mirror-setup.templates:2001
 msgid ""
-"Some non-free firmware has been made to work with Debian. Though this "
-"firmware is not at all a part of Debian, standard Debian tools can be used "
-"to install it. This firmware has varying licenses which may prevent you from "
-"using, modifying, or sharing it."
+"Firmware is a kind of software providing low-level control of certain "
+"hardware components (such as Wi-Fi cards or audio chipsets), which may not "
+"function fully or at all without it."
 msgstr ""
-"Κάποιο μη ελεύθερο υλισμικό έχει προσαρμοστεί για χρήση με το Debian. Αν και "
-"αυτό το υλισμικό δεν αποτελεί σε καμμιά περίπτωση μέρος του Debian, μπορεί "
-"να εγκατασταθεί με τα τυπικά εργαλεία του Debian. Το λογισμικό αυτό "
-"καλύπτεται από διάφορες άδειες χρήσης που πιθανόν να σας απαγορεύουν την "
-"χρήση, τροποποίηση ή τον διαμοιρασμό του."
+
+#. Type: boolean
+#. Description
+#. :sl5:
+#: ../apt-mirror-setup.templates:2001
+msgid ""
+"Although not at all part of Debian, some non-free firmware has been made to "
+"work with Debian. This firmware has varying licenses which restrict your "
+"freedoms to use, modify, or share the software, and generally does not have "
+"source forms that you may study."
+msgstr ""
 
 #. Type: boolean
 #. Description
