--- a/debian/po/eu.po
+++ b/debian/po/eu.po
@@ -27,7 +27,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: di-sublevel1_eu\n"
 "Report-Msgid-Bugs-To: apt-setup@packages.debian.org\n"
-"POT-Creation-Date: 2023-01-23 20:01+0000\n"
+"POT-Creation-Date: 2024-05-11 20:02+0000\n"
 "PO-Revision-Date: 2022-06-09 19:45+0000\n"
 "Last-Translator: Gontzal Manuel Pujana Onaindia <thadahdenyse@gmail.com>\n"
 "Language-Team: Basque <librezale@librezale.eus>\n"
@@ -534,7 +534,6 @@ msgstr "Ispilua aztertzen..."
 #. :sl5:
 #: ../apt-mirror-setup.templates:2001
 #, fuzzy
-#| msgid "Use non-free software?"
 msgid "Use non-free firmware?"
 msgstr "Erabili librea ez den softwarea?"
 
@@ -542,23 +541,22 @@ msgstr "Erabili librea ez den softwarea?"
 #. Description
 #. :sl5:
 #: ../apt-mirror-setup.templates:2001
-#, fuzzy
-#| msgid ""
-#| "Some non-free software has been made to work with Debian. Though this "
-#| "software is not at all a part of Debian, standard Debian tools can be "
-#| "used to install it. This software has varying licenses which may prevent "
-#| "you from using, modifying, or sharing it."
 msgid ""
-"Some non-free firmware has been made to work with Debian. Though this "
-"firmware is not at all a part of Debian, standard Debian tools can be used "
-"to install it. This firmware has varying licenses which may prevent you from "
-"using, modifying, or sharing it."
+"Firmware is a kind of software providing low-level control of certain "
+"hardware components (such as Wi-Fi cards or audio chipsets), which may not "
+"function fully or at all without it."
 msgstr ""
-"Libreak ez diren zenbait software Debian-ekin lan egiteko garatu izan dira. "
-"Nahiz eta software hauek Debian-eko erabateko zati ez izan, Debian-en "
-"tresnak erabil daitezke hauek instalatzeko. Software hauek lizentzia "
-"desberdinak eduki ditzakete eta software hauek erabiltzea, eraldatzea edo "
-"partekatzeko eskubidea debeka dezakete."
+
+#. Type: boolean
+#. Description
+#. :sl5:
+#: ../apt-mirror-setup.templates:2001
+msgid ""
+"Although not at all part of Debian, some non-free firmware has been made to "
+"work with Debian. This firmware has varying licenses which restrict your "
+"freedoms to use, modify, or share the software, and generally does not have "
+"source forms that you may study."
+msgstr ""
 
 #. Type: boolean
 #. Description
