--- a/debian/po/fa.po
+++ b/debian/po/fa.po
@@ -25,9 +25,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: fa sublevel1\n"
 "Report-Msgid-Bugs-To: apt-setup@packages.debian.org\n"
-"POT-Creation-Date: 2023-01-23 20:01+0000\n"
-"PO-Revision-Date: 2021-04-25 05:03+0000\n"
-"Last-Translator: Sina Carnelious <sinacarnelious@protonmail.com>\n"
+"POT-Creation-Date: 2024-05-11 20:02+0000\n"
+"PO-Revision-Date: 2024-04-10 07:17+0000\n"
+"Last-Translator: EndermanXD <82046100+EndermanCo@users.noreply.github.com>\n"
 "Language-Team: Debian-l10n-persian <debian-l10n-persian@lists.debian.org>\n"
 "Language: fa\n"
 "MIME-Version: 1.0\n"
@@ -534,7 +534,6 @@ msgstr "پویش آینه دریافت ..."
 #. :sl5:
 #: ../apt-mirror-setup.templates:2001
 #, fuzzy
-#| msgid "Use non-free software?"
 msgid "Use non-free firmware?"
 msgstr "از نرم‌افزار ناآزاد استفاده شود؟"
 
@@ -542,22 +541,22 @@ msgstr "از نرم‌افزار ناآزاد استفاده شود؟"
 #. Description
 #. :sl5:
 #: ../apt-mirror-setup.templates:2001
-#, fuzzy
-#| msgid ""
-#| "Some non-free software has been made to work with Debian. Though this "
-#| "software is not at all a part of Debian, standard Debian tools can be "
-#| "used to install it. This software has varying licenses which may prevent "
-#| "you from using, modifying, or sharing it."
 msgid ""
-"Some non-free firmware has been made to work with Debian. Though this "
-"firmware is not at all a part of Debian, standard Debian tools can be used "
-"to install it. This firmware has varying licenses which may prevent you from "
-"using, modifying, or sharing it."
+"Firmware is a kind of software providing low-level control of certain "
+"hardware components (such as Wi-Fi cards or audio chipsets), which may not "
+"function fully or at all without it."
 msgstr ""
-"برخی از نرم افزارهای غیر آزاد، برای کار کردن با دبیان، ساخته شده است.این نرم "
-"افزارها به صورت قسمتی از دبیان وجود ندارند، ولی از طریق ابزار های استاندارد "
-"دبیان قابل نصب هستند. این نرم افزارها از نظر مجوز گوناگون هستند که ممکن شما "
-"را در استفاده، ویرایش و به اشتراک گذاری آنها محدود کند."
+
+#. Type: boolean
+#. Description
+#. :sl5:
+#: ../apt-mirror-setup.templates:2001
+msgid ""
+"Although not at all part of Debian, some non-free firmware has been made to "
+"work with Debian. This firmware has varying licenses which restrict your "
+"freedoms to use, modify, or share the software, and generally does not have "
+"source forms that you may study."
+msgstr ""
 
 #. Type: boolean
 #. Description
