--- a/debian/po/ga.po
+++ b/debian/po/ga.po
@@ -11,13 +11,14 @@
 # Alastair McKinstry <mckinstry@computer.org>, 2001,2002
 # Free Software Foundation, Inc., 2001,2003
 # Kevin Patrick Scannell <scannell@SLU.EDU>, 2004, 2008, 2009, 2011.
+# Kevin Scannell <kscanne@gmail.com>, 2023.
 # Sean V. Kelley <s_oceallaigh@yahoo.com>, 1999
 msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: apt-setup@packages.debian.org\n"
-"POT-Creation-Date: 2023-01-23 20:01+0000\n"
-"PO-Revision-Date: 2006-03-21 14:42-0500\n"
+"POT-Creation-Date: 2024-05-11 20:02+0000\n"
+"PO-Revision-Date: 2023-04-24 19:41-0500\n"
 "Last-Translator: Kevin Scannell <kscanne@gmail.com>\n"
 "Language-Team: Irish <gaeilge-gnulinux@lists.sourceforge.net>\n"
 "Language: ga\n"
@@ -541,7 +542,6 @@ msgstr "Suíomh scáthánaithe á scanadh..."
 #. :sl5:
 #: ../apt-mirror-setup.templates:2001
 #, fuzzy
-#| msgid "Use non-free software?"
 msgid "Use non-free firmware?"
 msgstr "An bhfuil fonn ort bogearraí nach saor a úsáid?"
 
@@ -549,22 +549,22 @@ msgstr "An bhfuil fonn ort bogearraí nach saor a úsáid?"
 #. Description
 #. :sl5:
 #: ../apt-mirror-setup.templates:2001
-#, fuzzy
-#| msgid ""
-#| "Some non-free software has been made to work with Debian. Though this "
-#| "software is not at all a part of Debian, standard Debian tools can be "
-#| "used to install it. This software has varying licenses which may prevent "
-#| "you from using, modifying, or sharing it."
 msgid ""
-"Some non-free firmware has been made to work with Debian. Though this "
-"firmware is not at all a part of Debian, standard Debian tools can be used "
-"to install it. This firmware has varying licenses which may prevent you from "
-"using, modifying, or sharing it."
+"Firmware is a kind of software providing low-level control of certain "
+"hardware components (such as Wi-Fi cards or audio chipsets), which may not "
+"function fully or at all without it."
 msgstr ""
-"Oibríonn roinnt bogearraí dílsithe le Debian.  Cé nach cuid de Debian na "
-"bogearraí seo, is féidir iad a shuiteáil le huirlisí caighdeánacha Debian.  "
-"Tá ceadúnais éagsúla ag na bogearraí seo a chuireann cosc ort iad a úsáid, a "
-"athrú nó a roinnt le do chairde."
+
+#. Type: boolean
+#. Description
+#. :sl5:
+#: ../apt-mirror-setup.templates:2001
+msgid ""
+"Although not at all part of Debian, some non-free firmware has been made to "
+"work with Debian. This firmware has varying licenses which restrict your "
+"freedoms to use, modify, or share the software, and generally does not have "
+"source forms that you may study."
+msgstr ""
 
 #. Type: boolean
 #. Description
