--- a/debian/po/he.po
+++ b/debian/po/he.po
@@ -27,8 +27,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: apt-setup@packages.debian.org\n"
-"POT-Creation-Date: 2023-01-23 20:01+0000\n"
-"PO-Revision-Date: 2023-01-26 07:52+0000\n"
+"POT-Creation-Date: 2024-05-11 20:02+0000\n"
+"PO-Revision-Date: 2024-05-05 09:12+0000\n"
 "Last-Translator: Yaron Shahrabani <sh.yaron@gmail.com>\n"
 "Language-Team: Hebrew (https://www.transifex.com/yaron/teams/79473/he/)\n"
 "Language: he\n"
@@ -532,21 +532,26 @@ msgstr "אתר המראה נסרק…"
 msgid "Use non-free firmware?"
 msgstr "להשתמש בקושחה לא חופשית?"
 
-#  Type: boolean
-#  Description
 #. Type: boolean
 #. Description
 #. :sl5:
 #: ../apt-mirror-setup.templates:2001
 msgid ""
-"Some non-free firmware has been made to work with Debian. Though this "
-"firmware is not at all a part of Debian, standard Debian tools can be used "
-"to install it. This firmware has varying licenses which may prevent you from "
-"using, modifying, or sharing it."
+"Firmware is a kind of software providing low-level control of certain "
+"hardware components (such as Wi-Fi cards or audio chipsets), which may not "
+"function fully or at all without it."
 msgstr ""
-"ישנם רכיבי חומרה בלתי חופשיים שהוסבו לצורך עבודה עם דביאן. למרות שקושחות אלה "
-"אינן חלק מדביאן, ניתן להשתמש בכלים התקניים של דביאן כדי להתקין אותן. לקושחות "
-"אלה תנאי רישוי מגוונים שעשויים למנוע ממך להשתמש בהן, לשנות אותן או לשתף אותן."
+
+#. Type: boolean
+#. Description
+#. :sl5:
+#: ../apt-mirror-setup.templates:2001
+msgid ""
+"Although not at all part of Debian, some non-free firmware has been made to "
+"work with Debian. This firmware has varying licenses which restrict your "
+"freedoms to use, modify, or share the software, and generally does not have "
+"source forms that you may study."
+msgstr ""
 
 #  Type: boolean
 #  Description
