--- a/debian/po/hr.po
+++ b/debian/po/hr.po
@@ -16,7 +16,7 @@
 #   Vladimir Vuksan <vuksan@veus.hr>, 2000.
 #   Vlatko Kosturjak, 2001
 #   Tomislav Krznar <tomislav.krznar@gmail.com>, 2012, 2013, 2014, 2015.
-#   Valentin Vidic <Valentin.Vidic@CARNet.hr>, 2017
+#   Valentin Vidic <vvidic@debian.org>, 2018, 2021, 2023
 #   Milo Ivir <mail@milotype.de>, 2019, 2021, 2022.
 #   gogogogi <trebelnik2@gmail.com>, 2020.
 #
@@ -24,8 +24,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Debian-installer 1st-stage master file HR\n"
 "Report-Msgid-Bugs-To: apt-setup@packages.debian.org\n"
-"POT-Creation-Date: 2023-01-23 20:01+0000\n"
-"PO-Revision-Date: 2023-03-16 10:58+0000\n"
+"POT-Creation-Date: 2024-05-11 20:02+0000\n"
+"PO-Revision-Date: 2023-06-03 10:49+0000\n"
 "Last-Translator: Milo Ivir <mail@milotype.de>\n"
 "Language-Team: Croatian <lokalizacija@linux.hr>\n"
 "Language: hr\n"
@@ -534,15 +534,21 @@ msgstr "Koristiti vlasnički softver?"
 #. :sl5:
 #: ../apt-mirror-setup.templates:2001
 msgid ""
-"Some non-free firmware has been made to work with Debian. Though this "
-"firmware is not at all a part of Debian, standard Debian tools can be used "
-"to install it. This firmware has varying licenses which may prevent you from "
-"using, modifying, or sharing it."
+"Firmware is a kind of software providing low-level control of certain "
+"hardware components (such as Wi-Fi cards or audio chipsets), which may not "
+"function fully or at all without it."
 msgstr ""
-"Pojedini vlasnički firmware je načinjen kako bi radio s Debianom. Iako taj "
-"firmware ni na koji način nije dio Debiana, možete ga instalirati "
-"uobičajenim Debianovim alatima. Taj firmware ima različite licence koje "
-"sprječavaju njegovo korištenje, prilagođavanje ili dijeljenje."
+
+#. Type: boolean
+#. Description
+#. :sl5:
+#: ../apt-mirror-setup.templates:2001
+msgid ""
+"Although not at all part of Debian, some non-free firmware has been made to "
+"work with Debian. This firmware has varying licenses which restrict your "
+"freedoms to use, modify, or share the software, and generally does not have "
+"source forms that you may study."
+msgstr ""
 
 #. Type: boolean
 #. Description
