--- a/debian/po/ku.po
+++ b/debian/po/ku.po
@@ -18,9 +18,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: ku\n"
 "Report-Msgid-Bugs-To: apt-setup@packages.debian.org\n"
-"POT-Creation-Date: 2023-01-23 20:01+0000\n"
-"PO-Revision-Date: 2020-11-22 12:29+0000\n"
-"Last-Translator: Lecwan Munzur <lecwan@riseup.net>\n"
+"POT-Creation-Date: 2024-05-11 20:02+0000\n"
+"PO-Revision-Date: 2021-05-21 05:32+0000\n"
+"Last-Translator: Jacque Fresco <aidter@use.startmail.com>\n"
 "Language-Team: Kurdish Team http://pckurd.net\n"
 "Language: ku\n"
 "MIME-Version: 1.0\n"
@@ -524,7 +524,6 @@ msgstr "Neynik tê skenkirin..."
 #. :sl5:
 #: ../apt-mirror-setup.templates:2001
 #, fuzzy
-#| msgid "Use non-free software?"
 msgid "Use non-free firmware?"
 msgstr "Nivîsbariya neazad were bikaranîn?"
 
@@ -532,22 +531,22 @@ msgstr "Nivîsbariya neazad were bikaranîn?"
 #. Description
 #. :sl5:
 #: ../apt-mirror-setup.templates:2001
-#, fuzzy
-#| msgid ""
-#| "Some non-free software has been made to work with Debian. Though this "
-#| "software is not at all a part of Debian, standard Debian tools can be "
-#| "used to install it. This software has varying licenses which may prevent "
-#| "you from using, modifying, or sharing it."
 msgid ""
-"Some non-free firmware has been made to work with Debian. Though this "
-"firmware is not at all a part of Debian, standard Debian tools can be used "
-"to install it. This firmware has varying licenses which may prevent you from "
-"using, modifying, or sharing it."
+"Firmware is a kind of software providing low-level control of certain "
+"hardware components (such as Wi-Fi cards or audio chipsets), which may not "
+"function fully or at all without it."
 msgstr ""
-"Hin nivîsbariyên ne-azad ji bo xebitîna bi Debianê re hatine çêkirin. Ev "
-"nivîsbarî ne parçeyeke Debian e lê amûrên standard ên Debianê dikarin wê saz "
-"bikin. Ev nivîsbarî ji bo bikaranîn, guherandin an jî parvekirinê curbecur "
-"hatiye amadekirin."
+
+#. Type: boolean
+#. Description
+#. :sl5:
+#: ../apt-mirror-setup.templates:2001
+msgid ""
+"Although not at all part of Debian, some non-free firmware has been made to "
+"work with Debian. This firmware has varying licenses which restrict your "
+"freedoms to use, modify, or share the software, and generally does not have "
+"source forms that you may study."
+msgstr ""
 
 #. Type: boolean
 #. Description
