--- a/debian/po/nl.po
+++ b/debian/po/nl.po
@@ -21,14 +21,14 @@
 # Freek de Kruijf <f.de.kruijf@hetnet.nl>, 2006, 2007, 2008, 2009, 2010, 2011.
 # Taco Witte <tcwitte@cs.uu.nl>, 2004.
 # Reinout van Schouwen <reinouts@gnome.org>, 2007.
-# Frans Spiesschaert <Frans.Spiesschaert@yucom.be>, 2014-2022.
+# Frans Spiesschaert <Frans.Spiesschaert@yucom.be>, 2014-2023.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer/sublevel1\n"
 "Report-Msgid-Bugs-To: apt-setup@packages.debian.org\n"
-"POT-Creation-Date: 2023-01-23 20:01+0000\n"
-"PO-Revision-Date: 2023-01-24 12:12+0100\n"
+"POT-Creation-Date: 2024-05-11 20:02+0000\n"
+"PO-Revision-Date: 2024-05-13 20:29+0200\n"
 "Last-Translator: Frans Spiesschaert <Frans.Spiesschaert@yucom.be>\n"
 "Language-Team: Debian Dutch l10n Team <debian-l10n-dutch@lists.debian.org>\n"
 "Language: nl\n"
@@ -552,16 +552,29 @@ msgstr "Niet-vrije firmware gebruiken?"
 #. :sl5:
 #: ../apt-mirror-setup.templates:2001
 msgid ""
-"Some non-free firmware has been made to work with Debian. Though this "
-"firmware is not at all a part of Debian, standard Debian tools can be used "
-"to install it. This firmware has varying licenses which may prevent you from "
-"using, modifying, or sharing it."
+"Firmware is a kind of software providing low-level control of certain "
+"hardware components (such as Wi-Fi cards or audio chipsets), which may not "
+"function fully or at all without it."
 msgstr ""
-"Sommige niet-vrije firmware is voor Debian beschikbaar gemaakt. Hoewel deze "
-"firmware geen deel uitmaakt van Debian, kunt u de standaard Debian-"
-"hulpprogramma's gebruiken om ze te installeren. De licentievoorwaarden van "
-"deze firmware varieert en beperkt mogelijk het gebruik, de aanpassing of het "
-"delen ervan."
+"Firmware is een soort software die op een laag niveau controle biedt over "
+"bepaalde hardwarecomponenten (zoals wifi-kaarten of audiochips), die zonder "
+"deze software mogelijk niet volledig of helemaal niet functioneren."
+
+#. Type: boolean
+#. Description
+#. :sl5:
+#: ../apt-mirror-setup.templates:2001
+msgid ""
+"Although not at all part of Debian, some non-free firmware has been made to "
+"work with Debian. This firmware has varying licenses which restrict your "
+"freedoms to use, modify, or share the software, and generally does not have "
+"source forms that you may study."
+msgstr ""
+"Er werd voor gezorgd dat bepaalde niet-vrije firmware werkt met Debian, "
+"hoewel die helemaal geen onderdeel is van Debian. Deze firmware heeft "
+"verschillende licenties die uw vrijheid om de software te gebruiken, aan te "
+"passen of te delen beperken, en ze heeft over het algemeen geen broncodevorm "
+"die u kunt bestuderen."
 
 #. Type: boolean
 #. Description
@@ -576,7 +589,7 @@ msgstr ""
 #: ../apt-mirror-setup.templates:2001 ../apt-mirror-setup.templates:3001
 #: ../apt-mirror-setup.templates-ubuntu:1001
 msgid "Please choose whether you want to have it available anyway."
-msgstr "Wilt u het toch beschikbaar hebben?"
+msgstr "Kies of u deze toch beschikbaar wilt hebben."
 
 #. Type: boolean
 #. Description
@@ -598,8 +611,8 @@ msgstr ""
 "Sommige niet-vrije software is voor Debian beschikbaar gemaakt. Hoewel deze "
 "software geen deel uitmaakt van Debian, kunt u de standaard Debian-"
 "hulpprogramma's gebruiken om ze te installeren. De licentievoorwaarden van "
-"deze programma's varieert en beperkt mogelijk het gebruik, de aanpassing of "
-"het delen van deze programma's."
+"deze programma's kunnen variëren en beperken mogelijk het gebruik, de "
+"aanpassing of het delen van deze programma's."
 
 #. Type: boolean
 #. Description
@@ -622,7 +635,7 @@ msgstr ""
 "programma's zijn zelf 'vrije software' maar zijn afhankelijk van niet-vrije "
 "software voor bepaalde functionaliteit. Hoewel deze software geen deel "
 "uitmaakt van Debian, kunt u de standaard Debian-hulpprogramma's gebruiken om "
-"ze te installeren"
+"ze te installeren."
 
 #. Type: boolean
 #. Description
@@ -649,7 +662,7 @@ msgstr ""
 #: ../apt-mirror-setup.templates-ubuntu:5001
 msgid ""
 "Please choose whether you want this software to be made available to you."
-msgstr "Wilt u deze programma's ter beschikking hebben?"
+msgstr "Kies of u wilt dat deze software voor u beschikbaar wordt gemaakt."
 
 #. Type: select
 #. Choices
