--- a/debian/po/ro.po
+++ b/debian/po/ro.po
@@ -38,9 +38,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: ro\n"
 "Report-Msgid-Bugs-To: apt-setup@packages.debian.org\n"
-"POT-Creation-Date: 2023-01-23 20:01+0000\n"
-"PO-Revision-Date: 2023-06-19 12:51+0000\n"
-"Last-Translator: NicolaeFericitu <cni@disroot.org>\n"
+"POT-Creation-Date: 2024-05-11 20:02+0000\n"
+"PO-Revision-Date: 2024-04-22 06:07+0000\n"
+"Last-Translator: ThinkRoot <social@crism.ro>\n"
 "Language-Team: Romanian <debian-l10n-romanian@lists.debian.org>\n"
 "Language: ro\n"
 "MIME-Version: 1.0\n"
@@ -208,9 +208,8 @@ msgstr "actualizări ale versiunii"
 #. including host name. In short, KEEP THIS SHORT and, yes, that's tricky
 #. :sl1:
 #: ../apt-setup-udeb.templates:11001
-#, fuzzy
 msgid "backported software"
-msgstr "programe portate pentru versiunile anterioare"
+msgstr "programe anterioare"
 
 #. Type: multiselect
 #. Description
@@ -561,15 +560,21 @@ msgstr "Utilizați un firmware care nu este liber?"
 #. :sl5:
 #: ../apt-mirror-setup.templates:2001
 msgid ""
-"Some non-free firmware has been made to work with Debian. Though this "
-"firmware is not at all a part of Debian, standard Debian tools can be used "
-"to install it. This firmware has varying licenses which may prevent you from "
-"using, modifying, or sharing it."
+"Firmware is a kind of software providing low-level control of certain "
+"hardware components (such as Wi-Fi cards or audio chipsets), which may not "
+"function fully or at all without it."
 msgstr ""
-"Unele firmware-uri nelibere au fost făcute să funcționeze cu Debian. Deși "
-"acest firmware nu face parte din Debian, pentru a-l instala pot fi utilizate "
-"instrumentele Debian standard. Acest firmware are diferite licențe care vă "
-"pot împiedica să îl utilizați, să îl modificați sau să îl partajați."
+
+#. Type: boolean
+#. Description
+#. :sl5:
+#: ../apt-mirror-setup.templates:2001
+msgid ""
+"Although not at all part of Debian, some non-free firmware has been made to "
+"work with Debian. This firmware has varying licenses which restrict your "
+"freedoms to use, modify, or share the software, and generally does not have "
+"source forms that you may study."
+msgstr ""
 
 #. Type: boolean
 #. Description
