--- a/debian/po/si.po
+++ b/debian/po/si.po
@@ -17,7 +17,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: apt-setup@packages.debian.org\n"
-"POT-Creation-Date: 2023-01-23 20:01+0000\n"
+"POT-Creation-Date: 2024-05-11 20:02+0000\n"
 "PO-Revision-Date: 2023-03-01 15:39+0000\n"
 "Last-Translator: HelaBasa Group <weblate-helabasa@yalu.lk>\n"
 "Language-Team: Sinhala <info@hanthana.org>\n"
@@ -519,17 +519,22 @@ msgstr "නිදහස් නොවන මෘදුකාංග භාවිත
 #. Description
 #. :sl5:
 #: ../apt-mirror-setup.templates:2001
-#, fuzzy
 msgid ""
-"Some non-free firmware has been made to work with Debian. Though this "
-"firmware is not at all a part of Debian, standard Debian tools can be used "
-"to install it. This firmware has varying licenses which may prevent you from "
-"using, modifying, or sharing it."
+"Firmware is a kind of software providing low-level control of certain "
+"hardware components (such as Wi-Fi cards or audio chipsets), which may not "
+"function fully or at all without it."
 msgstr ""
-"සමහර නිදහස් නොවන මෘදුකාංග Debian සමඟ වැඩ කිරීමට සකසා ඇත. . මෙම මෘදුකාංග කොහෙත්ම "
-"Debian හි කොටසක් නොවුනත් එය ස්ථාපනය කිරීමට සම්මත Debian මෙවලම් භාවිතා කිරීමට හැක. මෙම "
-"මෘදුකාංග වලට විවිධ බලපත්‍ර ඇත. ඒවා මෘදුකාංගය භාවිතා කිරීමෙන්, විකරණය කිරීමෙන් හෝ හවුලේ බුක්ති "
-"විදීමෙන් ඔබව වළක්වනු ඇත."
+
+#. Type: boolean
+#. Description
+#. :sl5:
+#: ../apt-mirror-setup.templates:2001
+msgid ""
+"Although not at all part of Debian, some non-free firmware has been made to "
+"work with Debian. This firmware has varying licenses which restrict your "
+"freedoms to use, modify, or share the software, and generally does not have "
+"source forms that you may study."
+msgstr ""
 
 #. Type: boolean
 #. Description
