--- a/debian/po/sv.po
+++ b/debian/po/sv.po
@@ -26,9 +26,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: apt-setup@packages.debian.org\n"
-"POT-Creation-Date: 2023-01-23 20:01+0000\n"
-"PO-Revision-Date: 2023-02-02 11:37+0000\n"
-"Last-Translator: Luna Jernberg <droidbittin@gmail.com>\n"
+"POT-Creation-Date: 2024-05-11 20:02+0000\n"
+"PO-Revision-Date: 2024-05-13 10:00+0000\n"
+"Last-Translator: Anders Jonsson <anders.jonsson@norsjovallen.se>\n"
 "Language-Team: Swedish <debian-l10n-swedish@lists.debian.org>\n"
 "Language: sv\n"
 "MIME-Version: 1.0\n"
@@ -543,16 +543,29 @@ msgstr "Använd icke-fri fastprogramvara?"
 #. :sl5:
 #: ../apt-mirror-setup.templates:2001
 msgid ""
-"Some non-free firmware has been made to work with Debian. Though this "
-"firmware is not at all a part of Debian, standard Debian tools can be used "
-"to install it. This firmware has varying licenses which may prevent you from "
-"using, modifying, or sharing it."
+"Firmware is a kind of software providing low-level control of certain "
+"hardware components (such as Wi-Fi cards or audio chipsets), which may not "
+"function fully or at all without it."
 msgstr ""
-"Viss icke-fri fastprogramvara har anpassats för att fungera med Debian. "
-"Trots att den här fasta programvaran inte alls är en del av Debian kan "
-"Debians standardverktyg användas för att installera den. Den här fasta "
-"programvaran har varierande licenser som kan hindra dig från att använda, "
-"ändra eller dela med dig av den."
+"Fast programvara är en sorts programvara som tillhandahåller lågnivåkontroll "
+"över vissa hårdvarukomponenter (såsom wifikort eller ljud-chipset), som "
+"kanske inte fungerar fullständigt eller över huvud taget utan den."
+
+#. Type: boolean
+#. Description
+#. :sl5:
+#: ../apt-mirror-setup.templates:2001
+msgid ""
+"Although not at all part of Debian, some non-free firmware has been made to "
+"work with Debian. This firmware has varying licenses which restrict your "
+"freedoms to use, modify, or share the software, and generally does not have "
+"source forms that you may study."
+msgstr ""
+"Även om de inte är en del av Debian över huvud taget, så har viss icke-fri "
+"fast programvara fåtts att fungera med Debian. Denna fasta programvara har "
+"olika licenser som begränsar dina friheter att använda, modifiera eller dela "
+"med dig av programvaran, och har allmänt inte källkodsformer som du kan "
+"studera."
 
 #. Type: boolean
 #. Description
