--- a/debian/po/te.po
+++ b/debian/po/te.po
@@ -21,7 +21,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: te\n"
 "Report-Msgid-Bugs-To: apt-setup@packages.debian.org\n"
-"POT-Creation-Date: 2023-01-23 20:01+0000\n"
+"POT-Creation-Date: 2024-05-11 20:02+0000\n"
 "PO-Revision-Date: 2021-11-21 21:49+0000\n"
 "Last-Translator: Praveen Illa <mail2ipn@gmail.com>\n"
 "Language-Team: d-i <kde-i18n-doc@kde.org>\n"
@@ -518,7 +518,6 @@ msgstr "మిర్రర్ ని పరిశీలించు..."
 #. :sl5:
 #: ../apt-mirror-setup.templates:2001
 #, fuzzy
-#| msgid "Use non-free software?"
 msgid "Use non-free firmware?"
 msgstr "స్వేచ్ఛ మూలములు కాని సాఫ్ట్వేర్  వాడదలచారా?"
 
@@ -526,21 +525,22 @@ msgstr "స్వేచ్ఛ మూలములు కాని సాఫ్ట
 #. Description
 #. :sl5:
 #: ../apt-mirror-setup.templates:2001
-#, fuzzy
-#| msgid ""
-#| "Some non-free software has been made to work with Debian. Though this "
-#| "software is not at all a part of Debian, standard Debian tools can be "
-#| "used to install it. This software has varying licenses which may prevent "
-#| "you from using, modifying, or sharing it."
 msgid ""
-"Some non-free firmware has been made to work with Debian. Though this "
-"firmware is not at all a part of Debian, standard Debian tools can be used "
-"to install it. This firmware has varying licenses which may prevent you from "
-"using, modifying, or sharing it."
+"Firmware is a kind of software providing low-level control of certain "
+"hardware components (such as Wi-Fi cards or audio chipsets), which may not "
+"function fully or at all without it."
 msgstr ""
-"స్వేచ్ఛ మూలములు కాని సాఫ్ట్వేర్   డెబియన్ తో   పనిచేయునట్లుగా చేయబడినది. ఇవి  డెబియన్లో భాగం కాదు అయినా, "
-"ప్రామాణిక డెబియన్ పనిముట్లు స్థాపనకు వాడవచ్చు. ఈ సాఫ్ట్వేర్ లైసెన్సు షరతులు వివిధ రకాలుగా వుండటం వలన, "
-"మీరు వాడటానికి, మార్చటానికి, పంచుకోటానికి వీలు లేకపోవచ్చు."
+
+#. Type: boolean
+#. Description
+#. :sl5:
+#: ../apt-mirror-setup.templates:2001
+msgid ""
+"Although not at all part of Debian, some non-free firmware has been made to "
+"work with Debian. This firmware has varying licenses which restrict your "
+"freedoms to use, modify, or share the software, and generally does not have "
+"source forms that you may study."
+msgstr ""
 
 #. Type: boolean
 #. Description
