--- a/debian/po/vi.po
+++ b/debian/po/vi.po
@@ -18,7 +18,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer sublevel1\n"
 "Report-Msgid-Bugs-To: apt-setup@packages.debian.org\n"
-"POT-Creation-Date: 2023-01-23 20:01+0000\n"
+"POT-Creation-Date: 2024-05-11 20:02+0000\n"
 "PO-Revision-Date: 2023-02-24 10:38+0000\n"
 "Last-Translator: tictactoe <phandinhminh@protonmail.ch>\n"
 "Language-Team: Vietnamese <debian-l10n-vietnamese@lists.debian.org>\n"
@@ -532,16 +532,21 @@ msgstr "Sử dụng phần mềm firmware không tự do chứ?"
 #. :sl5:
 #: ../apt-mirror-setup.templates:2001
 msgid ""
-"Some non-free firmware has been made to work with Debian. Though this "
-"firmware is not at all a part of Debian, standard Debian tools can be used "
-"to install it. This firmware has varying licenses which may prevent you from "
-"using, modifying, or sharing it."
+"Firmware is a kind of software providing low-level control of certain "
+"hardware components (such as Wi-Fi cards or audio chipsets), which may not "
+"function fully or at all without it."
 msgstr ""
-"Một số gói phần mềm firmware không tự do đã được sửa đổi để hoạt động được "
-"với Debian. Mặc dù phần mềm firmware này không phải là một phần của Debian, "
-"công cụ Debian tiêu chuẩn có thể được sử dụng để cài đặt nó. Phần mềm "
-"firmware kiểu này có giấy phép thay đổi linh hoạt có thể ngăn chận bạn sử "
-"dụng, sửa đổi hoặc chia sẻ nó."
+
+#. Type: boolean
+#. Description
+#. :sl5:
+#: ../apt-mirror-setup.templates:2001
+msgid ""
+"Although not at all part of Debian, some non-free firmware has been made to "
+"work with Debian. This firmware has varying licenses which restrict your "
+"freedoms to use, modify, or share the software, and generally does not have "
+"source forms that you may study."
+msgstr ""
 
 #. Type: boolean
 #. Description
