--- a/debian/po/zh_CN.po
+++ b/debian/po/zh_CN.po
@@ -37,9 +37,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: apt-setup@packages.debian.org\n"
-"POT-Creation-Date: 2023-01-23 20:01+0000\n"
-"PO-Revision-Date: 2023-02-04 13:40+0000\n"
-"Last-Translator: Wenbin Lv <wenbin816@gmail.com>\n"
+"POT-Creation-Date: 2024-05-11 20:02+0000\n"
+"PO-Revision-Date: 2023-10-25 06:04+0000\n"
+"Last-Translator: Zi Jiaxu <Shelpdicriter@users.noreply.hosted.weblate.org>\n"
 "Language-Team: <debian-l10n-chinese@lists.debian.org>\n"
 "Language: zh_CN\n"
 "MIME-Version: 1.0\n"
@@ -529,14 +529,21 @@ msgstr "使用 non-free 固件吗？"
 #. :sl5:
 #: ../apt-mirror-setup.templates:2001
 msgid ""
-"Some non-free firmware has been made to work with Debian. Though this "
-"firmware is not at all a part of Debian, standard Debian tools can be used "
-"to install it. This firmware has varying licenses which may prevent you from "
-"using, modifying, or sharing it."
+"Firmware is a kind of software providing low-level control of certain "
+"hardware components (such as Wi-Fi cards or audio chipsets), which may not "
+"function fully or at all without it."
 msgstr ""
-"有些非自由固件也能在 Debian 中使用。尽管这些固件并不是 Debian 的一部分，但可"
-"以使用标准 Debian 工具安装它们。这些固件都有各自的许可证，其内容可能会阻止您"
-"使用、修改或共享它们。"
+
+#. Type: boolean
+#. Description
+#. :sl5:
+#: ../apt-mirror-setup.templates:2001
+msgid ""
+"Although not at all part of Debian, some non-free firmware has been made to "
+"work with Debian. This firmware has varying licenses which restrict your "
+"freedoms to use, modify, or share the software, and generally does not have "
+"source forms that you may study."
+msgstr ""
 
 #. Type: boolean
 #. Description
