--- a/debian/po/cy.po
+++ b/debian/po/cy.po
@@ -20,9 +20,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: apt-setup@packages.debian.org\n"
-"POT-Creation-Date: 2023-01-23 20:01+0000\n"
-"PO-Revision-Date: 2022-03-06 22:56+0000\n"
-"Last-Translator: Ceiri Wyn Tudur <ceiri.tudur@gmail.com>\n"
+"POT-Creation-Date: 2024-05-11 20:02+0000\n"
+"PO-Revision-Date: 2023-10-16 04:19+0000\n"
+"Last-Translator: Rhodri <rhodrilld@gmail.com>\n"
 "Language-Team: Welsh <>\n"
 "Language: cy\n"
 "MIME-Version: 1.0\n"
@@ -531,7 +531,6 @@ msgstr "Sganio'r drych..."
 #. :sl5:
 #: ../apt-mirror-setup.templates:2001
 #, fuzzy
-#| msgid "Use non-free software?"
 msgid "Use non-free firmware?"
 msgstr "Defnyddio meddalwedd nad yw'n rhydd?"
 
@@ -539,22 +538,22 @@ msgstr "Defnyddio meddalwedd nad yw'n rhydd?"
 #. Description
 #. :sl5:
 #: ../apt-mirror-setup.templates:2001
-#, fuzzy
-#| msgid ""
-#| "Some non-free software has been made to work with Debian. Though this "
-#| "software is not at all a part of Debian, standard Debian tools can be "
-#| "used to install it. This software has varying licenses which may prevent "
-#| "you from using, modifying, or sharing it."
 msgid ""
-"Some non-free firmware has been made to work with Debian. Though this "
-"firmware is not at all a part of Debian, standard Debian tools can be used "
-"to install it. This firmware has varying licenses which may prevent you from "
-"using, modifying, or sharing it."
+"Firmware is a kind of software providing low-level control of certain "
+"hardware components (such as Wi-Fi cards or audio chipsets), which may not "
+"function fully or at all without it."
 msgstr ""
-"Mae peth meddalwedd nad yw'n rhydd wedi ei addasu i weithio efo Debian. Er "
-"nad yw'r meddalwedd hwn yn rhan o Debian o gwbl, gellir defnyddio offer "
-"safonol Debian i'w sefydlu. Mae gan y meddalwedd hwn drwyddedau gwahanol a "
-"all eich rhwystro rhag ei ddefnyddio, ei newid neu ei rhannu ef."
+
+#. Type: boolean
+#. Description
+#. :sl5:
+#: ../apt-mirror-setup.templates:2001
+msgid ""
+"Although not at all part of Debian, some non-free firmware has been made to "
+"work with Debian. This firmware has varying licenses which restrict your "
+"freedoms to use, modify, or share the software, and generally does not have "
+"source forms that you may study."
+msgstr ""
 
 #. Type: boolean
 #. Description
