--- a/debian/po/es.po
+++ b/debian/po/es.po
@@ -19,6 +19,7 @@
 # Omar Campagne <ocampagne@gmail.com>, 2010
 # Javier Fernández-Sanguino <jfs@debian.org>, 2003-2012, 2014-2018, 2020
 # Camaleón <noelamac@gmail.com>, 2022.
+# Manuel \"Venturi\" Porras Peralta <venturi@openmailbox.org>, 2017.
 #
 # Equipo de traducción al español, por favor lean antes de traducir
 # los siguientes documentos:
@@ -59,8 +60,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: apt-setup@packages.debian.org\n"
-"POT-Creation-Date: 2023-01-23 20:01+0000\n"
-"PO-Revision-Date: 2023-02-11 16:42+0000\n"
+"POT-Creation-Date: 2024-05-11 20:02+0000\n"
+"PO-Revision-Date: 2024-05-13 10:00+0000\n"
 "Last-Translator: gallegonovato <fran-carro@hotmail.es>\n"
 "Language-Team: Debian Spanish <debian-l10n-spanish@lists.debian.org>\n"
 "Language: es\n"
@@ -435,7 +436,8 @@ msgstr "Cambio de medio"
 #. :sl1:
 #: ../apt-cdrom-setup.templates:7001
 msgid "Please insert the media labeled '${LABEL}' and press enter."
-msgstr "Introduzca el disco etiquetado «${LABEL}» y pulse Intro."
+msgstr ""
+"Por favor, inserte el soporte etiquetado como '${LABEL}' y pulse intro."
 
 #. Type: text
 #. Description
@@ -577,16 +579,28 @@ msgstr "¿Usas un firmware no libre?"
 #. :sl5:
 #: ../apt-mirror-setup.templates:2001
 msgid ""
-"Some non-free firmware has been made to work with Debian. Though this "
-"firmware is not at all a part of Debian, standard Debian tools can be used "
-"to install it. This firmware has varying licenses which may prevent you from "
-"using, modifying, or sharing it."
+"Firmware is a kind of software providing low-level control of certain "
+"hardware components (such as Wi-Fi cards or audio chipsets), which may not "
+"function fully or at all without it."
 msgstr ""
-"Se han hecho algunos firmwares que no son libres para que funcionen con "
-"Debian. Aunque este firmware no es en absoluto parte de Debian, pueden "
-"usarse las herramientas estándar de Debian para instalarlo. Este firmware "
-"tiene varias licencias que pueden impedirle usarlo, modificarlo o "
-"compartirlo."
+"El firmware es un tipo de software que proporciona un control de bajo nivel "
+"de ciertos componentes de hardware (como tarjetas Wi-Fi o chipsets de "
+"audio), que pueden no funcionar completamente o en absoluto sin él."
+
+#. Type: boolean
+#. Description
+#. :sl5:
+#: ../apt-mirror-setup.templates:2001
+msgid ""
+"Although not at all part of Debian, some non-free firmware has been made to "
+"work with Debian. This firmware has varying licenses which restrict your "
+"freedoms to use, modify, or share the software, and generally does not have "
+"source forms that you may study."
+msgstr ""
+"Aunque no es en absoluto parte de Debian, se ha hecho firmware que no es "
+"libre para que funcione con Debian. Este firmware tiene varias licencias que "
+"restringen sus libertades para usar, modificar o compartir el software, y "
+"generalmente no tiene formularios fuente que pueda estudiar."
 
 #. Type: boolean
 #. Description
