--- a/debian/po/km.po
+++ b/debian/po/km.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: km\n"
 "Report-Msgid-Bugs-To: apt-setup@packages.debian.org\n"
-"POT-Creation-Date: 2023-01-23 20:01+0000\n"
+"POT-Creation-Date: 2024-05-11 20:02+0000\n"
 "PO-Revision-Date: 2019-08-28 18:10+0000\n"
 "Last-Translator: leela <53352@protonmail.com>\n"
 "Language-Team: Khmer <support@khmeros.info>\n"
@@ -516,7 +516,6 @@ msgstr "កំពុង​វិភាគ​កញ្ចក់..."
 #. :sl5:
 #: ../apt-mirror-setup.templates:2001
 #, fuzzy
-#| msgid "Use non-free software?"
 msgid "Use non-free firmware?"
 msgstr "ប្រើ​កម្មវិធី​​​គិត​ថ្លៃ ?"
 
@@ -524,21 +523,22 @@ msgstr "ប្រើ​កម្មវិធី​​​គិត​ថ្លៃ
 #. Description
 #. :sl5:
 #: ../apt-mirror-setup.templates:2001
-#, fuzzy
-#| msgid ""
-#| "Some non-free software has been made to work with Debian. Though this "
-#| "software is not at all a part of Debian, standard Debian tools can be "
-#| "used to install it. This software has varying licenses which may prevent "
-#| "you from using, modifying, or sharing it."
 msgid ""
-"Some non-free firmware has been made to work with Debian. Though this "
-"firmware is not at all a part of Debian, standard Debian tools can be used "
-"to install it. This firmware has varying licenses which may prevent you from "
-"using, modifying, or sharing it."
+"Firmware is a kind of software providing low-level control of certain "
+"hardware components (such as Wi-Fi cards or audio chipsets), which may not "
+"function fully or at all without it."
 msgstr ""
-"កម្មវិធី​​មិន​សេរី​មួយ​ចំនួន​ត្រូវ​បាន​បង្កើត​ឡើង​ឲ្យ​ដំណើរការ​ជាមួយ​ដេបៀន ។ ទោះ​បីជា​ផ្នែកទន់​នេះ​មិន​មែន​ជា​ផ្នែក​"
-"របស់​ដេបៀន​ក៏​ដោយ ក៏​អ្នក​អាច​ប្រើ​ឧបករណ៍​ដេបៀន​ខ្នាតគំរូ ដើម្បី​ដំឡើង​វា​បាន​ដែរ ។ ផ្នែកទន់​នេះ​មាន​"
-"អាជ្ញាបណ្ណ​ខុសៗ​គ្នា ដែល​អាច​នឹង​មិន​អាច​ឲ្យ​អ្នក​ប្រើ កែប្រែ ឬ ចែក​រំលែក​វា​បាន​ឡើយ ។"
+
+#. Type: boolean
+#. Description
+#. :sl5:
+#: ../apt-mirror-setup.templates:2001
+msgid ""
+"Although not at all part of Debian, some non-free firmware has been made to "
+"work with Debian. This firmware has varying licenses which restrict your "
+"freedoms to use, modify, or share the software, and generally does not have "
+"source forms that you may study."
+msgstr ""
 
 #. Type: boolean
 #. Description
