--- a/debian/po/lo.po
+++ b/debian/po/lo.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: lo\n"
 "Report-Msgid-Bugs-To: apt-setup@packages.debian.org\n"
-"POT-Creation-Date: 2023-01-23 20:01+0000\n"
+"POT-Creation-Date: 2024-05-11 20:02+0000\n"
 "PO-Revision-Date: 2012-04-25 09:05+0700\n"
 "Last-Translator: Anousak Souphavanh <anousak@gmail.com>\n"
 "Language-Team: Lao <lo@li.org>\n"
@@ -510,7 +510,6 @@ msgstr "ກຳລັງສຳຫລວດແຫລ່ງສຳເນົາ..."
 #. :sl5:
 #: ../apt-mirror-setup.templates:2001
 #, fuzzy
-#| msgid "Use non-free software?"
 msgid "Use non-free firmware?"
 msgstr "ຈະໃຊ້ຊອບແວຣ໌ໍ່ເສຣີຫລືອບໍ່?"
 
@@ -518,22 +517,22 @@ msgstr "ຈະໃຊ້ຊອບແວຣ໌ໍ່ເສຣີຫລືອບໍ
 #. Description
 #. :sl5:
 #: ../apt-mirror-setup.templates:2001
-#, fuzzy
-#| msgid ""
-#| "Some non-free software has been made to work with Debian. Though this "
-#| "software is not at all a part of Debian, standard Debian tools can be "
-#| "used to install it. This software has varying licenses which may prevent "
-#| "you from using, modifying, or sharing it."
 msgid ""
-"Some non-free firmware has been made to work with Debian. Though this "
-"firmware is not at all a part of Debian, standard Debian tools can be used "
-"to install it. This firmware has varying licenses which may prevent you from "
-"using, modifying, or sharing it."
+"Firmware is a kind of software providing low-level control of certain "
+"hardware components (such as Wi-Fi cards or audio chipsets), which may not "
+"function fully or at all without it."
 msgstr ""
-"ຊອບແວຣບໍ່ເສຣີບາງໂຕ ໄດ້ຖືກເຮັດໃຫ້ໃຊ້ງານກັບເດບຽນໄດ້ "
-"ຫາກແມ່ນວ່າຊອບແວຣເຫລົ່ານີ້ຈະບໍ່ແມ່ນສ່ວນໜຶ່ງຂອງເດບຽນແຕ່ຢ່າງໃດ "
-"ແຕ່ກໍ່ສາມາດໃຊ້ເຄື່ອງມືມາດຕະຖານຂອງເດບຽນໃນການຕິດຕັ້ງໄດ້ ເດບຽນເຫລົ່ານີ້ໃຊ້ສັນຍາອະນຸຍາດຕ່າງໆກັນໄປ "
-"ເຊີ່ງອາດຫ້າມທ່ານບໍ່ໃຫ້ໃຊ້ແກ້ໄຂຫລືແບ່ງປັນກໍ່ໄດ້."
+
+#. Type: boolean
+#. Description
+#. :sl5:
+#: ../apt-mirror-setup.templates:2001
+msgid ""
+"Although not at all part of Debian, some non-free firmware has been made to "
+"work with Debian. This firmware has varying licenses which restrict your "
+"freedoms to use, modify, or share the software, and generally does not have "
+"source forms that you may study."
+msgstr ""
 
 #. Type: boolean
 #. Description
