--- a/debian/po/lt.po
+++ b/debian/po/lt.po
@@ -29,8 +29,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: apt-setup@packages.debian.org\n"
-"POT-Creation-Date: 2023-01-23 20:01+0000\n"
-"PO-Revision-Date: 2023-07-17 07:08+0000\n"
+"POT-Creation-Date: 2024-05-11 20:02+0000\n"
+"PO-Revision-Date: 2023-09-28 16:03+0000\n"
 "Last-Translator: Rimas Kudelis <rimas@kudelis.lt>\n"
 "Language-Team: Lithuanian <komp_lt@konferencijos.lt>\n"
 "Language: lt\n"
@@ -540,16 +540,21 @@ msgstr "Ar naudoti ne laisvą (non-free) aparatinę programinę įrangą?"
 #. :sl5:
 #: ../apt-mirror-setup.templates:2001
 msgid ""
-"Some non-free firmware has been made to work with Debian. Though this "
-"firmware is not at all a part of Debian, standard Debian tools can be used "
-"to install it. This firmware has varying licenses which may prevent you from "
-"using, modifying, or sharing it."
+"Firmware is a kind of software providing low-level control of certain "
+"hardware components (such as Wi-Fi cards or audio chipsets), which may not "
+"function fully or at all without it."
 msgstr ""
-"Kai kuri ne laisva aparatinė programinė įranga yra parengta dirbti „Debian“ "
-"sistemose. Nors ši aparatinė programinė įranga nėra „Debian“ dalis, jos "
-"įdiegimui gali būti naudojamos įprastinės „Debian“ priemonės. Ši aparatinė "
-"programinė įranga platinama pagal įvairias licencijas, kurios gali riboti "
-"naudojimąsi ja, jos modifikavimą ar platinimą."
+
+#. Type: boolean
+#. Description
+#. :sl5:
+#: ../apt-mirror-setup.templates:2001
+msgid ""
+"Although not at all part of Debian, some non-free firmware has been made to "
+"work with Debian. This firmware has varying licenses which restrict your "
+"freedoms to use, modify, or share the software, and generally does not have "
+"source forms that you may study."
+msgstr ""
 
 #. Type: boolean
 #. Description
