--- a/debian/po/pl.po
+++ b/debian/po/pl.po
@@ -36,16 +36,16 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: apt-setup@packages.debian.org\n"
-"POT-Creation-Date: 2023-01-23 20:01+0000\n"
-"PO-Revision-Date: 2023-08-03 08:07+0000\n"
+"POT-Creation-Date: 2024-05-11 20:02+0000\n"
+"PO-Revision-Date: 2024-05-13 10:00+0000\n"
 "Last-Translator: Matthaiks <kitynska@gmail.com>\n"
 "Language-Team: Polish <debian-l10n-polish@lists.debian.org>\n"
 "Language: pl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 "
-"|| n%100>=20) ? 1 : 2;\n"
+"Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 "
+"|| n%100>=20) ? 1 : 2);\n"
 
 #. Type: text
 #. Description
@@ -551,16 +551,30 @@ msgstr "Używać niewolnego oprogramowania układowego?"
 #. :sl5:
 #: ../apt-mirror-setup.templates:2001
 msgid ""
-"Some non-free firmware has been made to work with Debian. Though this "
-"firmware is not at all a part of Debian, standard Debian tools can be used "
-"to install it. This firmware has varying licenses which may prevent you from "
-"using, modifying, or sharing it."
+"Firmware is a kind of software providing low-level control of certain "
+"hardware components (such as Wi-Fi cards or audio chipsets), which may not "
+"function fully or at all without it."
 msgstr ""
-"Niektóre niewolne oprogramowanie układowe zostało stworzone do pracy z "
-"Debianem. Chociaż to oprogramowanie układowe w ogóle nie jest częścią "
-"Debiana, do jego zainstalowania można użyć standardowych narzędzi Debiana. "
-"To oprogramowanie układowe ma różne licencje, które mogą uniemożliwiać jego "
-"używanie, modyfikowanie lub udostępnianie."
+"Oprogramowanie układowe to rodzaj oprogramowania zapewniającego "
+"niskopoziomową kontrolę nad niektórymi elementami sprzętu (takimi jak karty "
+"Wi-Fi lub chipsety audio), które bez niego mogą nie działać w pełni lub w "
+"ogóle."
+
+#. Type: boolean
+#. Description
+#. :sl5:
+#: ../apt-mirror-setup.templates:2001
+msgid ""
+"Although not at all part of Debian, some non-free firmware has been made to "
+"work with Debian. This firmware has varying licenses which restrict your "
+"freedoms to use, modify, or share the software, and generally does not have "
+"source forms that you may study."
+msgstr ""
+"Chociaż w ogóle nie jest częścią Debiana, niektóre niewolne oprogramowanie "
+"sprzętowe zostało przystosowane do współpracy z Debianem. To oprogramowanie "
+"sprzętowe ma różne licencje, które ograniczają swobodę użytkowania, "
+"modyfikowania lub udostępniania oprogramowania i zazwyczaj nie posiada "
+"formularzy źródłowych, które można przestudiować."
 
 #. Type: boolean
 #. Description
