--- a/debian/po/th.po
+++ b/debian/po/th.po
@@ -22,7 +22,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: apt-setup@packages.debian.org\n"
-"POT-Creation-Date: 2023-01-23 20:01+0000\n"
+"POT-Creation-Date: 2024-05-11 20:02+0000\n"
 "PO-Revision-Date: 2021-02-03 16:48+0700\n"
 "Last-Translator: Theppitak Karoonboonyanan <theppitak@gmail.com>\n"
 "Language-Team: Thai <thai-l10n@googlegroups.com>\n"
@@ -516,7 +516,6 @@ msgstr "กำลังสำรวจแหล่งสำเนา..."
 #. :sl5:
 #: ../apt-mirror-setup.templates:2001
 #, fuzzy
-#| msgid "Use non-free software?"
 msgid "Use non-free firmware?"
 msgstr "จะใช้ซอฟต์แวร์ไม่เสรีหรือไม่?"
 
@@ -524,22 +523,22 @@ msgstr "จะใช้ซอฟต์แวร์ไม่เสรีหรื
 #. Description
 #. :sl5:
 #: ../apt-mirror-setup.templates:2001
-#, fuzzy
-#| msgid ""
-#| "Some non-free software has been made to work with Debian. Though this "
-#| "software is not at all a part of Debian, standard Debian tools can be "
-#| "used to install it. This software has varying licenses which may prevent "
-#| "you from using, modifying, or sharing it."
 msgid ""
-"Some non-free firmware has been made to work with Debian. Though this "
-"firmware is not at all a part of Debian, standard Debian tools can be used "
-"to install it. This firmware has varying licenses which may prevent you from "
-"using, modifying, or sharing it."
+"Firmware is a kind of software providing low-level control of certain "
+"hardware components (such as Wi-Fi cards or audio chipsets), which may not "
+"function fully or at all without it."
 msgstr ""
-"ซอฟต์แวร์ไม่เสรีบางตัว ได้ถูกทำให้ใช้งานกับเดเบียนได้ "
-"แม้ซอฟต์แวร์เหล่านี้จะไม่ใช่ส่วนหนึ่งของเดเบียนแต่อย่างใด "
-"แต่ก็สามารถใช้เครื่องมือมาตรฐานของเดเบียนในการติดตั้งได้ ซอฟต์แวร์เหล่านี้ใช้สัญญาอนุญาตต่างๆ "
-"กันไป ซึ่งอาจห้ามคุณไม่ให้ใช้ แก้ไข หรือแบ่งปันก็ได้"
+
+#. Type: boolean
+#. Description
+#. :sl5:
+#: ../apt-mirror-setup.templates:2001
+msgid ""
+"Although not at all part of Debian, some non-free firmware has been made to "
+"work with Debian. This firmware has varying licenses which restrict your "
+"freedoms to use, modify, or share the software, and generally does not have "
+"source forms that you may study."
+msgstr ""
 
 #. Type: boolean
 #. Description
