--- a/debian/po/ug.po
+++ b/debian/po/ug.po
@@ -3,7 +3,8 @@
 #
 # DO NOT MODIFY THIS FILE DIRECTLY: SUCH CHANGES WILL BE LOST
 #
-#
+# Abdusalam <1810010207@s.upc.edu.cn>, 2020.
+# Abduqadir Abliz <sahran.ug@gmail.com>, 2017.
 #
 # Debian Installer master translation for Uyghur
 # Don't forget to properly fill-in the header of PO files
@@ -18,14 +19,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: apt-setup@packages.debian.org\n"
-"POT-Creation-Date: 2023-01-23 20:01+0000\n"
-"PO-Revision-Date: 2018-08-22 12:42+0000\n"
-"Last-Translator: ButterflyOfFire <ButterflyOfFire@protonmail.com>\n"
+"POT-Creation-Date: 2024-05-11 20:02+0000\n"
+"PO-Revision-Date: 2020-07-21 17:24+0000\n"
+"Last-Translator: Abdusalam <1810010207@s.upc.edu.cn>\n"
 "Language-Team: Uyghur Computer Science Association <UKIJ@yahoogroups.com>\n"
 "Language: ug\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
 
 #. Type: text
 #. Description
@@ -536,7 +538,6 @@ msgstr "تەسۋىر تەكشۈرۈۋاتىدۇ..."
 #. :sl5:
 #: ../apt-mirror-setup.templates:2001
 #, fuzzy
-#| msgid "Use non-free software?"
 msgid "Use non-free firmware?"
 msgstr "ھەقلىق يۇمشاق دېتال ئىشلىتەمسىز؟"
 
@@ -544,22 +545,22 @@ msgstr "ھەقلىق يۇمشاق دېتال ئىشلىتەمسىز؟"
 #. Description
 #. :sl5:
 #: ../apt-mirror-setup.templates:2001
-#, fuzzy
-#| msgid ""
-#| "Some non-free software has been made to work with Debian. Though this "
-#| "software is not at all a part of Debian, standard Debian tools can be "
-#| "used to install it. This software has varying licenses which may prevent "
-#| "you from using, modifying, or sharing it."
 msgid ""
-"Some non-free firmware has been made to work with Debian. Though this "
-"firmware is not at all a part of Debian, standard Debian tools can be used "
-"to install it. This firmware has varying licenses which may prevent you from "
-"using, modifying, or sharing it."
+"Firmware is a kind of software providing low-level control of certain "
+"hardware components (such as Wi-Fi cards or audio chipsets), which may not "
+"function fully or at all without it."
 msgstr ""
-"بەزى ھەقلىق يۇمشاق دېتالنىمۇ  Debian دا ئىشلەتكىلى بولىدۇ. بۇ دېتاللار  "
-"Debian نىڭ بىر قىسمى بولمىسىمۇ ئەمما ئۆلچەملىك  Debian قوراللىرى ئۇلارنى "
-"ئورنىتالايدۇ. بۇ يۇمشاق دېتاللارنىڭ ئوخشاش بولمىغان ئىجازەتنامىسى بار، بۇ "
-"سىزنىڭ ئۇلارنى ئىشلىتىش، ئۆزگەرتىش ياكى ھەمبەھىرلەشنى چەكلىشى مۇمكىن."
+
+#. Type: boolean
+#. Description
+#. :sl5:
+#: ../apt-mirror-setup.templates:2001
+msgid ""
+"Although not at all part of Debian, some non-free firmware has been made to "
+"work with Debian. This firmware has varying licenses which restrict your "
+"freedoms to use, modify, or share the software, and generally does not have "
+"source forms that you may study."
+msgstr ""
 
 #. Type: boolean
 #. Description
