--- a/debian/po/uk.po
+++ b/debian/po/uk.po
@@ -25,16 +25,16 @@ msgid ""
 msgstr ""
 "Project-Id-Version: uk\n"
 "Report-Msgid-Bugs-To: apt-setup@packages.debian.org\n"
-"POT-Creation-Date: 2023-01-23 20:01+0000\n"
-"PO-Revision-Date: 2023-06-15 17:50+0000\n"
-"Last-Translator: Tymofii Lytvynenko <till.svit@gmail.com>\n"
+"POT-Creation-Date: 2024-05-11 20:02+0000\n"
+"PO-Revision-Date: 2024-05-20 15:02+0000\n"
+"Last-Translator: Hotripak <hotr1pak@gmail.com>\n"
 "Language-Team: Ukrainian <translation-team-uk@lists.sourceforge.net>\n"
 "Language: uk\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
-"%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
+"%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
 #. Type: text
 #. Description
@@ -540,16 +540,29 @@ msgstr "Використовувати невільні мікропрограм
 #. :sl5:
 #: ../apt-mirror-setup.templates:2001
 msgid ""
-"Some non-free firmware has been made to work with Debian. Though this "
-"firmware is not at all a part of Debian, standard Debian tools can be used "
-"to install it. This firmware has varying licenses which may prevent you from "
-"using, modifying, or sharing it."
+"Firmware is a kind of software providing low-level control of certain "
+"hardware components (such as Wi-Fi cards or audio chipsets), which may not "
+"function fully or at all without it."
 msgstr ""
-"Деякі невільні мікропрограми були підлаштовані для роботи в Debian. Хоча "
-"вони не є частиною Debian, стандартні інструменти Debian можуть їх "
-"встановити. Це програмне забезпечення має різні ліцензії, які можуть "
-"обмежити вас у використанні, модифікуванні чи сумісному використанні цих "
-"програм."
+"Прошивка - це різновид програмного забезпечення, що забезпечує низькорівневе "
+"керування певними апаратними компонентами (наприклад, картами Wi-Fi або "
+"аудіочіпсетами), які без нього можуть не працювати повністю або взагалі не "
+"функціонувати."
+
+#. Type: boolean
+#. Description
+#. :sl5:
+#: ../apt-mirror-setup.templates:2001
+msgid ""
+"Although not at all part of Debian, some non-free firmware has been made to "
+"work with Debian. This firmware has varying licenses which restrict your "
+"freedoms to use, modify, or share the software, and generally does not have "
+"source forms that you may study."
+msgstr ""
+"Хоча це зовсім не частина Debian, деякі невільні прошивки було створено для "
+"роботи з Debian. Ця прошивка має різні ліцензії, які обмежують вашу свободу "
+"використовувати, змінювати або поширювати програмне забезпечення, і, як "
+"правило, не має вихідних текстів, які ви можете вивчити."
 
 #. Type: boolean
 #. Description
